--- a/QuantumultX/Rewrite/General.conf
+++ b/QuantumultX/Rewrite/General.conf
@@ -8,7 +8,7 @@ hostname = www.google.cn,www.firefox.com.cn,www.zhihu.com
 
 # Redirect no allowed
 
-^https?:\/\/(www.)?zhihu\.com url 302 https://yishangfei.github.io/
+^https?:\/\/(www.)?zhihu\.com url 302 https://yishangfei.github.io?content=知乎
 
 # Redirect HTTP to HTTPS
 ^https?:\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
