--- a/QuantumultX/Rewrite/General.conf
+++ b/QuantumultX/Rewrite/General.conf
@@ -7,8 +7,8 @@ hostname = www.google.cn,www.firefox.com.cn,www.zhihu.com
 ^https?:\/\/(ditu|maps).google\.cn url 302 https://maps.google.com
 
 # Redirect no allowed
-
 ^https?:\/\/(www.)?zhihu\.com url 302 https://yishangfei.github.io?content=知乎
+^https?:\/\/(www.)?weibo\.com url 302 https://yishangfei.github.io?content=微博
 
 # Redirect HTTP to HTTPS
 ^https?:\/\/(www.)?taobao\.com\/ url 302 https://taobao.com/
