--- a/QuantumultX/Rewrite/General.conf
+++ b/QuantumultX/Rewrite/General.conf
@@ -1,4 +1,4 @@
-hostname = www.google.cn,www.firefox.com.cn,www.zhihu.com
+hostname = www.google.cn,www.firefox.com.cn,www.zhihu.com,www.weibo.cn
 
 # Redirect Google Search Service
 ^https?:\/\/(www.)?(g|google)\.cn url 302 https://www.google.com
