--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -25,7 +25,7 @@ interface-mode = auto
 # > 当节点连续失败多少次后开始切换节点
 switch-node-after-failure-times = 3
 # 解析器
-resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/scripts/sub-store-parser.js
+resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/dist/sub-store-parser.loon.min.js
 # ssid-trigger参数，用于指定SSID下流量模式切换，（default表示默认，cellular表示蜂窝，目前支持三种值：rule，direct，proxy） 
 # ssid-trigger = "default":rule, "cellular":rule,"ASUS_5G":direct
 
