--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -40,9 +40,9 @@ CNIX = https://github.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https
 
 # >策略组
 [Proxy Group]
-🚀 节点选择 = select,♻️ 自动选择,🔮 负载均衡,DIRECT,🇭🇰香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
 ♻️ 自动选择 = url-test,🇭🇰香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,url=http://www.gstatic.com/generate_204, interval=1800, tolerance = 50, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
 🔮 负载均衡 = load-balance,🇭🇰香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,url = http://www.gstatic.com/generate_204, interval = 300,max-timeout = 2000,algorithm = pcc, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Round_Robin.png
+🚀 节点选择 = select,♻️ 自动选择,🔮 负载均衡,DIRECT,🇭🇰香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
 📟 电报消息 = select,♻️ 自动选择,Other, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
 💰 PayPal = select,♻️ 自动选择,🇺🇸 美国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/PayPal.png
 🍎 苹果服务 = select,♻️ 自动选择,DIRECT,🇺🇸 美国, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
@@ -52,11 +52,11 @@ CNIX = https://github.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https
 # >筛选订阅节点
 [Remote Filter]
 # >通过正则方式筛选
-🇭🇰 香港 = NameRegex,CNIX, FilterKey = 香港|HK|中港|沪港
-🇨🇳 台湾 = NameRegex,CNIX, FilterKey = 台湾|TW
-🇯🇵 日本 = NameRegex,CNIX, FilterKey = 日本|JP
-🇺🇸 美国 = NameRegex,CNIX, FilterKey = 美国|US
-Other = NameRegex,CNIX, FilterKey = ^(?!.*(HK|JP|US|TW|香港|日本|台湾|美国|中港|沪港)).*$
+🇭🇰 香港 = NameRegex,CNIX,一元机场,CNIX, FilterKey = 香港|HK|中港|沪港
+🇨🇳 台湾 = NameRegex,CNIX,一元机场,CNIX, FilterKey = 台湾|TW
+🇯🇵 日本 = NameRegex,CNIX,一元机场,CNIX, FilterKey = 日本|JP
+🇺🇸 美国 = NameRegex,CNIX一元机场,CNIX,, FilterKey = 美国|US
+Other = NameRegex,CNIX,一元机场,CNIX, FilterKey = ^(?!.*(HK|JP|US|TW|香港|日本|台湾|美国|中港|沪港)).*$
 
 # >本地分流规则
 [Rule]
