--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -12,9 +12,9 @@ dns-server = system,119.29.29.29,114.114.114.114,223.5.5.5
 # Wi-Fi 访问
 # > 允许 Wi-Fi 网络下其它设备访问
 allow-udp-proxy = false
-allow-wifi-access = true
+allow-wifi-access = false
 wifi-access-http-port = 7890
-wifi-access-socket5-port = 7222
+wifi-access-socket5-port = 7890
 # > 解决一些ip请求无法匹配域名类规则的问题。real-ip指定的域名将不返回fake ip响应，直接将dns请求发往目标dns服务器
 real-ip = msftconnecttest.com, msftncsi.com, *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 # > 代理测速 URL
@@ -22,8 +22,6 @@ proxy-test-url = http://www.gstatic.com/generate_204
 # > 测速超时 (s)
 test-timeout = 5
 interface-mode = auto
-# > 当节点连续失败多少次后开始切换节点
-switch-node-after-failure-times = 3
 # 解析器
 resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/dist/sub-store-parser.loon.min.js
 # ssid-trigger参数，用于指定SSID下流量模式切换，（default表示默认，cellular表示蜂窝，目前支持三种值：rule，direct，proxy） 
@@ -38,7 +36,7 @@ iQZone = https://gist.githubusercontent.com/,udp=true,fast-open=true,vmess-aead=
 
 # >策略组
 [Proxy Group]
-♻️ 自动选择 = url-test,🇭🇰 香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,url = http://www.gstatic.com/generate_204,interval = 1800,tolerance = 50,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
+♻️ 自动选择 = url-test,🇭🇰 香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,url = http://www.gstatic.com/generate_204,interval = 300,tolerance = 100,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Auto.png
 🔮 负载均衡 = load-balance,🇭🇰 香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,url = http://www.gstatic.com/generate_204,interval = 300,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Round_Robin.png
 🚀 节点选择 = select,♻️ 自动选择,🔮 负载均衡,DIRECT,🇭🇰 香港,🇨🇳 台湾,🇺🇸美国,🇯🇵日本,Other,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Static.png
 📟 电报消息 = select,♻️ 自动选择,Other,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
@@ -69,22 +67,23 @@ FINAL,🦈 漏网之鱼
 
 # >分流规则 远程订阅
 [Remote Rule]
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Global/Global.list, policy=♻️ 自动选择, tag=🌍 Global, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia.list, policy=♻️ 自动选择, tag=🌍 GlobalMedia, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/GlobalMedia/GlobalMedia_Domain.list, policy=♻️ 自动选择, tag=🌍 GlobalMedia_Domain, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/China/China.list, policy=DIRECT, tag=🎯 国内网站-直连, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaMax/ChinaMax.list, policy=DIRECT, tag=🎯 ChinaMax, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaMax/ChinaMax_Domain.list, policy=DIRECT, tag=🎯 ChinaMax_Domain, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=🎯 中国IP-直连, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest-直连, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=DIRECT, tag=🍎 Apple, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppleNews/AppleNews.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/FitnessPlus/FitnessPlus.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/AppleProxy/AppleProxy.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Telegram/Telegram.list, policy=📟 Telegram, tag=📟 Telegram, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/PayPal/PayPal.list, policy=💰 PayPal, tag=💰 PayPal, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Hijacking/Hijacking.list, policy=⛔️ 全球拦截, tag=⛔️ 全球拦截, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Privacy/Privacy.list, policy=⛔️ 全球拦截, tag=⛔️ 全球拦截, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Global/Global.list, policy=♻️ 自动选择, tag=🌍 Global, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/GlobalMedia/GlobalMedia.list, policy=♻️ 自动选择, tag=🌍 GlobalMedia, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/GlobalMedia/GlobalMedia_Domain.list, policy=♻️ 自动选择, tag=🌍 GlobalMedia_Domain, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/China/China.list, policy=DIRECT, tag=🎯 国内网站-直连, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/ChinaMax/ChinaMax.list, policy=DIRECT, tag=🎯 ChinaMax, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/ChinaMax/ChinaMax_Domain.list, policy=DIRECT, tag=🎯 ChinaMax_Domain, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/ChinaIPs/ChinaIPs.list, policy=DIRECT, tag=🎯 中国IP-直连, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/WeChat/WeChat.list.list, policy=DIRECT, tag=💬 微信-直连, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Speedtest/Speedtest.list, policy=DIRECT, tag=🌐 Speedtest-直连, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Apple/Apple.list, policy=DIRECT, tag=🍎 Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/AppleNews/AppleNews.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/FitnessPlus/FitnessPlus.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/AppleProxy/AppleProxy.list, policy=🍎 苹果服务, tag=🍎 Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Telegram/Telegram.list, policy=📟 Telegram, tag=📟 Telegram, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/PayPal/PayPal.list, policy=💰 PayPal, tag=💰 PayPal, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Hijacking/Hijacking.list, policy=⛔️ 全球拦截, tag=⛔️ 全球拦截, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/release/rule/Loon/Privacy/Privacy.list, policy=⛔️ 全球拦截, tag=⛔️ 全球拦截, enabled=true
 
 # >本地URL复写
 [URL Rewrite]
