--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -32,7 +32,7 @@ resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/bac
 
 # >机场订阅
 [Remote Proxy]
-iQZone = https://gist.githubusercontent.com/,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
+iQZone = https://gist.githubusercontent.com/,udp=true,fast-open=true,vmess-aead=true,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/China_Telecom.png
 
 # >策略组
 [Proxy Group]
