--- a/loon_diy.conf
+++ b/loon_diy.conf
@@ -8,7 +8,7 @@ bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,1
 # DNS 服务器
 dns-server = system,119.29.29.29,114.114.114.114,223.5.5.5
 # DOH 服务器
-# doh-server = https://162.14.132.76/dns-query
+# doh-server = https://125397.alidns.com/dns-query
 # Wi-Fi 访问
 # > 允许 Wi-Fi 网络下其它设备访问
 allow-udp-proxy = false
